--- a/app/src/main/res/layout/activity_cadastro2.xml
+++ b/app/src/main/res/layout/activity_cadastro2.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="373dp"
-        android:layout_height="592dp"
+        android:layout_height="607dp"
         android:background="@color/ic_launcher_background"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,18 +17,75 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/txtTitulo2"
+            android:id="@+id/txtCadTitulo2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="19dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="55dp"
             android:paddingLeft="30dp"
             android:text="@string/strCadTitulo"
             android:textColor="@color/buttons"
             android:textSize="28sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/editTextText9"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/entradaDados"
+            android:ems="10"
+            android:inputType="text"
+            android:paddingLeft="15dp"
+            android:text="E-mail"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText11"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/editTextText11"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/entradaDados"
+            android:ems="10"
+            android:inputType="text"
+            android:paddingLeft="15dp"
+            android:text="Criar Senha"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText12"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/editTextText12"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/entradaDados"
+            android:ems="10"
+            android:inputType="text"
+            android:paddingLeft="15dp"
+            android:text="Confirmar Senha"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="268dp" />
+
+        <ImageView
+            android:id="@+id/imgTelaCad"
+            android:layout_width="159dp"
+            android:layout_height="123dp"
+            android:src="@tools:sample/avatars"
+            tools:layout_editor_absoluteX="108dp"
+            tools:layout_editor_absoluteY="473dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
@@ -40,7 +97,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnVoltar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -54,7 +111,7 @@
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnSalvar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
@@ -63,7 +120,7 @@
             android:paddingTop="10dp"
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
-            android:text="@string/strProximo"
+            android:text="@string/strSalvar"
             android:textAlignment="textEnd"
             android:textSize="18sp" />
     </LinearLayout>
