Nova atualização cadastro

--- a/app/src/main/res/layout/activity_cadastro2.xml
+++ b/app/src/main/res/layout/activity_cadastro2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cadBack"
-    tools:context=".Cadastro02">
+    tools:context=".Cadastro2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="373dp"
@@ -22,53 +22,65 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="19dp"
             android:layout_marginTop="35dp"
-            android:layout_marginBottom="55dp"
             android:paddingLeft="30dp"
             android:text="@string/strCadTitulo"
             android:textColor="@color/buttons"
             android:textSize="28sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/imgTelaCad"
+            android:layout_width="299dp"
+            android:layout_height="466dp"
+            android:src="@tools:sample/avatars"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/img_cad" />
+
         <EditText
-            android:id="@+id/editTextText9"
+            android:id="@+id/editTextText13"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="55dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
+            android:backgroundTint="@color/entradaDados"
             android:ems="10"
             android:inputType="text"
             android:paddingLeft="15dp"
             android:text="E-mail"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText11"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtCadTitulo2" />
 
         <EditText
-            android:id="@+id/editTextText11"
+            android:id="@+id/editTextText14"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
             android:ems="10"
             android:inputType="text"
             android:paddingLeft="15dp"
             android:text="Criar Senha"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText12"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextText13" />
 
         <EditText
-            android:id="@+id/editTextText12"
+            android:id="@+id/editTextText15"
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@color/entradaDados"
             android:ems="10"
@@ -77,15 +89,7 @@
             android:text="Confirmar Senha"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="268dp" />
-
-        <ImageView
-            android:id="@+id/imgTelaCad"
-            android:layout_width="159dp"
-            android:layout_height="123dp"
-            android:src="@tools:sample/avatars"
-            tools:layout_editor_absoluteX="108dp"
-            tools:layout_editor_absoluteY="473dp" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText14" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
