Funcionalidades dos botoes

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -23,6 +23,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:layout_weight="1"
+            android:onClick="clickVoltar"
             android:paddingLeft="40dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -37,6 +38,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
+            android:onClick="clickProx"
             android:paddingTop="10dp"
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
