--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
         android:layout_marginBottom="28dp"
         android:backgroundTint="@color/buttons"
         android:elevation="20dp"
+        android:onClick="clickComecar"
         android:text="Começar"
         android:textSize="20sp"
         app:cornerRadius="30dp"
