--- a/app/src/main/res/layout/activity_cadastro2.xml
+++ b/app/src/main/res/layout/activity_cadastro2.xml
@@ -16,6 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <TextView
             android:id="@+id/txtCadTitulo2"
             android:layout_width="wrap_content"
@@ -70,6 +71,7 @@
             android:ems="10"
             android:inputType="text"
             android:paddingLeft="15dp"
+            android:password="false"
             android:text="Criar Senha"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
