--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:onClick="clickProx"
             android:paddingTop="10dp"
@@ -79,7 +80,7 @@
         <EditText
             android:id="@+id/editNomeEmp"
             android:layout_width="0dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
@@ -95,7 +96,7 @@
         <EditText
             android:id="@+id/editTextText2"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="48dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
@@ -111,7 +112,7 @@
         <EditText
             android:id="@+id/editTextText3"
             android:layout_width="0dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
@@ -127,7 +128,7 @@
         <EditText
             android:id="@+id/editTextText4"
             android:layout_width="0dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
@@ -143,7 +144,7 @@
         <EditText
             android:id="@+id/editTextText5"
             android:layout_width="0dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
@@ -159,7 +160,7 @@
         <EditText
             android:id="@+id/editTextText6"
             android:layout_width="230dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
             android:ems="10"
@@ -168,14 +169,14 @@
             android:text="Bairro"
             app:layout_constraintBottom_toTopOf="@+id/editTextText8"
             app:layout_constraintEnd_toEndOf="@+id/editTextText8"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/editTextText8"
             app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
 
         <EditText
             android:id="@+id/editTextText8"
             android:layout_width="230dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
@@ -190,7 +191,7 @@
         <EditText
             android:id="@+id/editTextText10"
             android:layout_width="0dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="54dp"
             android:background="@color/entradaDados"
@@ -206,28 +207,32 @@
         <EditText
             android:id="@+id/editTextText"
             android:layout_width="84dp"
-            android:layout_height="44dp"
+            android:layout_height="48dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
             android:ems="10"
             android:inputType="text"
             android:paddingLeft="15dp"
             android:text="Nº"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText7"
             app:layout_constraintStart_toEndOf="@+id/editTextText6"
-            tools:layout_editor_absoluteY="396dp" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
 
         <EditText
             android:id="@+id/editTextText7"
             android:layout_width="84dp"
-            android:layout_height="44dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/entradaDados"
             android:ems="10"
             android:inputType="text"
             android:paddingLeft="15dp"
             android:text="UF"
-            app:layout_constraintStart_toEndOf="@+id/editTextText8"
-            tools:layout_editor_absoluteY="449dp" />
+            app:layout_constraintBottom_toTopOf="@+id/editTextText10"
+            app:layout_constraintStart_toEndOf="@+id/editTextText8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
