--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -32,16 +32,16 @@
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/btnSalvar"
+            android:id="@+id/btnProx"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="15dp"
             android:layout_weight="1"
             android:onClick="clickProx"
             android:paddingTop="10dp"
-            android:paddingRight="40dp"
+            android:paddingRight="30dp"
             android:paddingBottom="10dp"
             android:text="@string/strProximo"
             android:textAlignment="textEnd"
@@ -50,11 +50,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="373dp"
-        android:layout_height="600dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="374dp"
+        android:layout_height="588dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:background="@color/ic_launcher_background"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,8 +67,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="19dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="55dp"
+            android:layout_marginTop="55dp"
+            android:layout_marginBottom="35dp"
             android:paddingLeft="30dp"
             android:text="@string/strCadTitulo"
             android:textColor="@color/buttons"
