--- a/app/src/main/res/layout/activity_cadastro2.xml
+++ b/app/src/main/res/layout/activity_cadastro2.xml
@@ -129,6 +129,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
+            android:onClick="clickSalvar"
             android:paddingTop="10dp"
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
