--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,5 +2,7 @@
     <style name="CustomShapeAppearence">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">20dp</item>
+
+        ocnaso
     </style>
 </resources>
